# a2a_health2

./: .env  README.md  pyproject.toml  send_symptom_check_task.py
agents/: llm_config.py
agents/HealthRecordsAgent/: task_manager.py
agents/SymptomCheckerAgent/: __main__.py  agent.py  task_manager.py
agents/appointment_agent/: __main__.py  agent.py  task_manager.py
agents/health_records_agent/: __main__.py  agent.py
agents/host_agent/: entry.py  orchestrator.py  task_manager.py
agents/symptom_checker_agent/: __main__.py  agent.py  task_manager.py
app/: cmd.py
healthcare_multi_agent_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
models/: agent.py  json_rpc.py  request.py  task.py
server/: __init__.py  server.py  task_manager.py
ui/: app.py
utilities/a2a/: agent_connect.py  agent_discovery.py  agent_registry.json
utilities/mcp/: mcp_config.json  mcp_connect.py  mcp_discovery.py
